Added crossing and mutation